k8s-related/ingress/basic/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nginx-node4.piseth.dev
      secretName: nginx-k8s-demo-tls
  rules:
    - host: nginx-node4.piseth.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
